--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "6.1.3",
     "@angular/platform-browser-dynamic": "6.0.1",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/geolocation": "^4.12.0",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "^2.1.3",
