--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "^2.1.3",
+    "cordova-plugin-googlemaps": "^2.3.11",
     "ionic-angular": "3.9.2",
     "ionic-cache": "^3.1.2",
     "ionicons": "3.0.0",
@@ -38,5 +39,13 @@
     "ng2-cache": "^0.2.1",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "(API_KEY_FOR_ANDROID)",
+        "API_KEY_FOR_IOS": "(API_KEY_FOR_IOS)"
+      }
+    }
+  }
 }
