--- a/package.json
+++ b/package.json
@@ -25,14 +25,20 @@
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "^2.1.3",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-googlemaps": "^2.3.11",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.0.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionic-cache": "^3.1.2",
     "ionicons": "3.0.0",
     "ng2-cache": "^0.2.1",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-android": "~7.0.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.0",
@@ -45,7 +51,15 @@
       "cordova-plugin-googlemaps": {
         "API_KEY_FOR_ANDROID": "(API_KEY_FOR_ANDROID)",
         "API_KEY_FOR_IOS": "(API_KEY_FOR_IOS)"
-      }
-    }
+      },
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
